--- a/public/index.html
+++ b/public/index.html
@@ -53,11 +53,12 @@
 <script>
     const ACTION_CAST_STATUS = 'castStatus'
     const ACTION_CAST_START = 'castStart'
+    const ACTION_CAST_STOP = 'castStop'
     const ACTION_CAST_LIST = 'castList'
+    const ACTION_CAST_DEVICE_LIST = 'castDeviceList'
     const ACTION_STREAM_ADD = 'streamAdd'
     const ACTION_STREAM_LIST = 'streamList'
     const ACTION_FILE_LIST = 'fileList'
-    const ACTION_DEVICE_LIST = 'deviceList'
 
     Vue.component('render-stream', {
         props: ['stream'],
@@ -111,6 +112,12 @@
                     deviceId: cast.deviceId
                 }))
             },
+            socketConnect() {
+                const socket = new WebSocket(`ws://${window.location.host}/ws`);
+                socket.onmessage = this.onSocketMessage
+                socket.onclose = this.onSocketClose
+                this.$set(this, 'socket', socket)
+            },
             onSocketMessage(e) {
                 const data = JSON.parse(e.data);
                 if (this[data.action]) {
@@ -118,7 +125,13 @@
                     this[data.action](data);
                 }
             },
-            [ACTION_DEVICE_LIST](data) {
+            onSocketClose(e) {
+                console.log('Socket closed. Reconnect will be attempted in 1 second.', e.reason);
+                setTimeout(() => {
+                    this.socketConnect();
+                }, 1000);
+            },
+            [ACTION_CAST_DEVICE_LIST](data) {
                 this.$set(this, 'devices', data.value)
             },
             [ACTION_CAST_LIST](data) {
@@ -135,9 +148,9 @@
             },
         },
         created() {
-            const socket = new WebSocket(`ws://${window.location.host}/ws`);
-            socket.onmessage = this.onSocketMessage
-            this.$set(this, 'socket', socket)
+
+            this.socketConnect()
+
         }
     })
 
@@ -155,7 +168,7 @@
     }
 
     function fetchDevices() {
-        socket.send(JSON.stringify({action: ACTION_DEVICE_LIST}))
+        socket.send(JSON.stringify({action: ACTION_CAST_DEVICE_LIST}))
     }
 
 
