--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,6 +13,7 @@
 <body>
 <div id="app">
     <div class="container-fluid">
+        <pre>{{devices}}</pre>
         <div class="row">
             <div class="col-sm">
                 <select v-model="playDeviceId">
